--- a/package.json
+++ b/package.json
@@ -21,39 +21,38 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.1.2",
-    "@nestjs/core": "^10.4.4",
-    "@nestjs/mongoose": "^6.4.0",
-    "@nestjs/platform-express": "^10.4.20",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.14.0",
-    "mongoose": "^6.13.6",
-    "reflect-metadata": "^0.1.13",
+    "@nestjs/common": "^11.1.13",
+    "@nestjs/core": "^11.1.13",
+    "@nestjs/mongoose": "^11.0.4",
+    "@nestjs/platform-express": "^11.1.13",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "mongoose": "^9.2.0",
+    "reflect-metadata": "^0.2.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.5",
-    "@nestjs/schematics": "^7.3.1",
-    "@nestjs/testing": "^7.0.11",
-    "@types/express": "^4.17.6",
-    "@types/jest": "25.1.4",
-    "@types/mongoose": "^5.7.19",
-    "@types/node": "^13.13.6",
-    "@types/supertest": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^29.0.3",
-    "prettier": "^1.19.1",
+    "@nestjs/cli": "^11.0.16",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.13",
+    "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.2.3",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
+    "eslint": "^10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "jest": "^30.2.0",
+    "prettier": "^3.8.1",
     "supertest": "^4.0.2",
-    "ts-jest": "25.5.1",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^8.10.1",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^3.9.2"
+    "ts-jest": "^29.4.6",
+    "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
